welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: Missing closing brace `}' assumed here
   	if (estFaceMur==false){
        ^